--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
 		<canvas id='hud' width='640px' height='480px'></canvas>
 		<canvas id='rendering' width='4096px' height='4096px'></canvas>
 		<script src='Content/Datas/Scripts/System/vendor/three.min.js'></script>
+		<script src='Content/Datas/Scripts/System/vendor/physi.js'></script>
 		<script src='Content/Datas/Scripts/System/vendor/howler.min.js'></script>
 		<script src='Content/Datas/Scripts/System/loaders/objLoader.js'></script>
+		<script>
+			Physijs.scripts.worker = 'Content/Datas/Scripts/System/vendor/physijs_worker.js';
+			Physijs.scripts.ammo = 'Content/Datas/Scripts/System/vendor/ammo.js';
+		</script>
 		<script src='Content/Datas/Scripts/System/includes.js'></script>
 	</body>
 </html>
