Some progress but infinite loop dependencies

--- a/index.html
+++ b/index.html
@@ -41,13 +41,10 @@
 		<video id='video-container' class='hidden' height='480px'></video>
 		<canvas id='hud' width='640px' height='480px'></canvas>
 		<canvas id='rendering' width='4096px' height='4096px'></canvas>
-		<script >
-			let a = 0;
-			a = 0;
+		<script>
 			//Physijs.scripts.worker = 'Content/Datas/Scripts/System/vendor/physijs_worker.js';
 			//Physijs.scripts.ammo = 'Content/Datas/Scripts/System/vendor/ammo.js';
 		</script>
-		<script>var exports = {};</script>
-		<script type="module" src='Content/Datas/Scripts/System/main.js'></script>
+		<script type="module" src="./Content/Datas/Scripts/System/main.js"></script>
 	</body>
 </html>
