--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			//Physijs.scripts.worker = 'Content/Datas/Scripts/System/vendor/physijs_worker.js';
 			//Physijs.scripts.ammo = 'Content/Datas/Scripts/System/vendor/ammo.js';
 		</script>
+		<script type="module" src="./Content/Datas/Scripts/System/index.js"></script>
 		<script type="module" src="./Content/Datas/Scripts/System/main.js"></script>
 	</body>
 </html>
